# opentrapp

./: .env.example  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  Makefile  OpenSSF-Guide.md  README.md  RELEASING.md  ROADMAP.md  SCORECARD.md  SECURITY.md  compose.yml  dist-workspace.toml  distribution.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  dco.yml  fuzz.yml  publish-crate.yml  release.yml  scorecard.yml  skill-firewall.yml  supply-chain.yml  sync-skill-firewall.yml
actions/skill-scan/: README.md  action.yml
app/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
app/e2e/: _demo-helpers.ts  coverage-fixture.ts  demo-tour.spec.ts  demo-wizard.spec.ts  navigation.spec.ts  smoke.spec.ts  user-facing.spec.ts  wizard.spec.ts
app/scripts/: merge-coverage.mjs
app/src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
app/src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/crates/core/: Cargo.toml  README.md
app/src-tauri/crates/core/src/: approvals.rs  boundary.rs  config_ops.rs  control.rs  credentials.rs  diagnostics.rs  events.rs  execute.rs  health.rs  idle.rs  lib.rs  markers.rs  prerequisites.rs  runguard.rs  selftest.rs  sentinel.rs  status.rs  stream.rs  supervisor.rs  telegram.rs  workflow_ops.rs
app/src-tauri/crates/core/src/embedded/: perimeter.yml
app/src-tauri/crates/core/src/embedded/perimeter-resources/: allowlist.txt  resolv.conf  vault-proxy.py
app/src-tauri/crates/core/src/embedded/perimeter-resources/manifests/agent/: component.yml
app/src-tauri/crates/core/src/embedded/perimeter-resources/manifests/skills/: component.yml
app/src-tauri/crates/core/src/embedded/perimeter-resources/manifests/social/: component.yml
app/src-tauri/crates/core/src/embedded/perimeter-resources/sentinel/: config.sh  egress-advisor.sh  judge.sh
app/src-tauri/crates/core/src/embedded/perimeter-resources/sentinel/corpus/: build.sh  known-bad.json
app/src-tauri/crates/core/src/embedded/perimeter-resources/sentinel/lib/: sentinel_embed.py
app/src-tauri/crates/core/src/orchestrator/: allowlist.rs  discovery.rs  embedded_resources.rs  error.rs  manifest.rs  mod.rs  perimeter.rs  podman.rs  runner.rs  state.rs  workflow.rs
app/src-tauri/crates/core/src/util/: mod.rs  secrets.rs  shell.rs
app/src-tauri/crates/daemon/: Cargo.toml
app/src-tauri/crates/daemon/src/: main.rs
app/src-tauri/crates/viewer-server/: Cargo.toml  README.md
app/src-tauri/crates/viewer-server/src/: events.rs  launcher.rs  main.rs  routes.rs  security.rs  session.rs
app/src-tauri/fuzz/: .gitignore  Cargo.toml  README.md
app/src-tauri/fuzz/corpus/manifest_parse/: seed-minimal.yml
app/src-tauri/fuzz/fuzz_targets/: manifest_parse.rs  redact_secrets.rs  runner_interpolate.rs
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/: perimeter.yml
app/src-tauri/src/: daemon_link.rs  idle.rs  lib.rs  lifecycle.rs  main.rs  status_aggregator.rs
app/src-tauri/src/bootstrap/: auto_activate.rs  migrate_from_lobster_trapp.rs  mod.rs
app/src-tauri/src/commands/: config.rs  credentials.rs  diagnostics.rs  egress.rs  execute.rs  health.rs  lifecycle.rs  manifest_cmds.rs  mod.rs  prerequisites.rs  sentinel.rs  status.rs  stream.rs  telegram.rs  workflow_cmds.rs
app/src-tauri/src/orchestrator/: discovery.rs  mod.rs  perimeter.rs  podman.rs  runner.rs  state.rs  tests.rs
config/: orchestrator-workflows.yml
docs/: OpenSSF-Quiz.md  assurance-case.md  b4b-hardware-test-plan.md  code-signing-policy.md  de-tauri-viewer-research.md  deploying-the-landing-page.md  diagrams.md  footprint-and-device-usability.md  forge-spotlight.md  governance.md  handoff-code-quality-2026-05-05.md  handoff-web-gui.md  handoff.md  headless.md  index.html  known-advisories.md  openssf-badge-answers.md  openssf-best-practices-application.md  perimeter-explained.md  perimeter-test-handoff.md  privacy.html  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.4.0.md  release-notes-v0.6.0.md  release-notes-v0.7.0.md  release-notes-v0.7.1-rc1.md  release-notes-v0.7.1-rc2.md  release-notes-v0.7.2-rc1.md  release-notes-v0.8.0.md  reproduce.md  reproduce.sh  road-to-recommendable.md  roadmap-post-launch.md  roadmap.md  scorecard-plan-2026-05-05.md  signpath-application.md  skill-install-flow.md  (+7 more)
docs/adr/: 0001-proxy-side-api-key-injection.md  0002-adaptive-shell-levels.md  0003-content-disarm-reconstruction.md  0004-parking-moltbook-pioneer.md  0005-deserve-to-exist-scope-test.md  0006-four-container-topology.md  0007-manifest-driven-generic-backend.md  0008-tauri-over-electron.md  0009-five-container-perimeter.md  0010-pinned-resolver-dns.md  0011-zero-trust-self-sufficient-bootstrap.md  0012-subscription-oauth-auth-feasibility.md  0013-monorepo-consolidation.md  0014-monorepo-modular-distribution.md  0015-local-ai-judgment-layer.md  0016-host-mediated-allowlist-loosening.md  0017-unpark-social-live-adapter.md  0018-idle-auto-pause-host-waker.md  0019-headless-daemon-gui-viewer-split.md  0020-product-identity-and-distribution.md  0021-danger-gated-agentic-control-plane.md  0022-daemon-control-surface.md  0023-distribution-and-packaging.md  0024-product-structure-three-concerns.md  0025-standalone-skill-firewall-scope.md  README.md  (+1 more)
schemas/: component.schema.json
scripts/: build-skill-firewall-projection.sh  demo-gif.sh  install-shield.sh  render-gradient-banner.py  render-social-preview.py  setup-updater.sh
sentinel/: README.md  config.sh  egress-advisor.test.sh  embed.sh  embed.test.sh  judge.test.sh  verdict-schema.json
tests/: boundary-selftest.sh  integration-test.sh  memory-profile.sh  orchestrator-check.sh  proxy-memory-soak.sh  red-team-breakout.sh  requirements.txt
(+530 files in other folders)
