# This package is also the workspace root (kept here, NOT at the repo root, so
# `target/` stays at app/src-tauri/target — CI and tauri-action assume that path).
# Phase B (ADR-0019) adds two tauri-free members: the headless daemon + its core.
# `fuzz/` is a workspace-of-its-own and is intentionally not a member.
[workspace]
members = ["crates/core", "crates/daemon"]
# crates/viewer-server is a SCAFFOLD for the de-Tauri loopback web GUI (ADR-0022 /
# docs/specs/2026-06-17-loopback-web-gui-implementation.md). Excluded — and therefore
# ignored by cargo, CI, and Cargo.lock — until the §0 de-risking spike passes its
# threat-model review (now written as docs/threat-model.md T8; the gate is maintainer
# acceptance of T8's hostile-extension residual + the live/UX checks on capable hardware).
# The implementing agent moves it to `members` at migration step 2.
exclude = ["crates/viewer-server"]
resolver = "2"

[package]
name = "opentrapp"
version = "0.7.2"
edition = "2021"
# Never published to crates.io — this is a desktop app with workspace-internal
# path deps. `publish = false` makes it a private crate so cargo-deny's
# allow-wildcard-paths applies to the internal `opentrapp-core` path dependency.
publish = false
description = "Containerization perimeter + skill scanner for autonomous CLI agents"
authors = ["Albert Dobmeyer"]
license = "MIT"
repository = "https://github.com/albertdobmeyer/opentrapp"
homepage = "https://github.com/albertdobmeyer/opentrapp#readme"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
thiserror = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2.5.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
opentrapp-core = { path = "crates/core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[lib]
name = "opentrapp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# Exposes a thin public surface (`fuzz_api` module) over the manifest
# parser and command-argument interpolator. Enabled only by the fuzz
# crate at app/src-tauri/fuzz/. Production builds have the feature off
# and the internal modules remain private.
fuzzing = ["opentrapp-core/fuzzing"]
