# Virtual workspace root for the OpenTrApp Rust backend. Kept here (NOT at the
# repo root) so `target/` stays at app/src-tauri/target — CI assumes that path.
#
# Post de-Tauri cutover (ADR-0022) this is a PURE virtual workspace: the GUI
# `opentrapp` Tauri crate is gone. The product is the headless `opentrapp-daemon`
# + the on-demand loopback `viewer-server` (serving the React app over HTTP),
# both Tauri/GTK/WebKit/wry-free. `fuzz/` is a workspace-of-its-own and is
# intentionally not a member.
[workspace]
# INVARIANT (the gtk-free CI gate): every member must stay gtk/webkit/wry-free —
# `cargo tree | grep -iE 'tauri|wry|webkit|gtk'` MUST be empty.
members = ["crates/core", "crates/daemon", "crates/viewer-server"]
resolver = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
