[package]
name = "lobster-trapp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# This crate is a workspace-of-its-own (the `[workspace]` line below)
# rather than a member of the parent app/src-tauri workspace. cargo-fuzz
# expects to live in a child directory and run from there; making it a
# separate workspace keeps `cargo build` in the parent unaffected.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_yaml = "0.9"

[dependencies.lobster_trapp_lib]
path = ".."
features = ["fuzzing"]

# Each fuzz target compiles to its own binary. Targets are added below;
# `cargo fuzz run <name>` invokes a single target.

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runner_interpolate"
path = "fuzz_targets/runner_interpolate.rs"
test = false
doc = false
bench = false
