# opentrapp-core — the tauri-free orchestration core (Phase B, ADR-0019).
#
# This crate MUST NOT depend on tauri / wry / webkit, directly or transitively.
# It is the half of the application that the headless daemon links; pulling in a
# GUI dependency here would defeat the entire daemon split (CI asserts the
# daemon's dependency graph is WebKit-free).
[package]
name = "opentrapp-core"
version = "0.7.1"
edition = "2021"
license = "MIT"
description = "Headless orchestration core for OpenTrApp (perimeter state contract, no GUI deps)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# Mirrors the opentrapp crate's `fuzzing` feature so `#[cfg(feature = "fuzzing")]`
# items in moved modules (e.g. runner::interpolate_args_for_test, surfaced via
# lib.rs::fuzz_api) compile when the fuzz harness builds. opentrapp's `fuzzing`
# feature enables this one transitively.
fuzzing = []
