# opentrapp-core — the tauri-free orchestration core (Phase B, ADR-0019).
#
# This crate MUST NOT depend on tauri / wry / webkit, directly or transitively.
# It is the half of the application that the headless daemon links; pulling in a
# GUI dependency here would defeat the entire daemon split (CI asserts the
# daemon's dependency graph is WebKit-free).
[package]
name = "opentrapp-core"
version = "0.7.2"
edition = "2021"
license = "MIT"
# Publishable to crates.io (ADR-0020 / ADR-0023): the reusable, tauri-free
# orchestration core. It has NO workspace path deps (every dependency is a
# registry crate), so it publishes standalone. The `opentrapp` GUI crate and the
# daemon — which reference this crate by *path* — stay `publish = false`; that is
# what holds the version-less path dep cargo-deny's `allow-wildcard-paths` covers.
description = "Headless orchestration core for OpenTrApp (perimeter state contract, no GUI deps)"
repository = "https://github.com/albertdobmeyer/opentrapp"
homepage = "https://github.com/albertdobmeyer/opentrapp#readme"
authors = ["Albert Dobmeyer"]
readme = "README.md"
keywords = ["security", "containerization", "ai-agent", "perimeter", "orchestration"]
categories = ["virtualization", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
regex = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
# Mirrors the opentrapp crate's `fuzzing` feature so `#[cfg(feature = "fuzzing")]`
# items in moved modules (e.g. runner::interpolate_args_for_test, surfaced via
# lib.rs::fuzz_api) compile when the fuzz harness builds. opentrapp's `fuzzing`
# feature enables this one transitively.
fuzzing = []
