# opentrapp-daemon — the headless perimeter daemon (Phase B, ADR-0019).
#
# Depends ONLY on opentrapp-core. It must never gain a tauri/wry/webkit
# dependency — that is the entire point of the split (a ~30-60 MB resting daemon
# with no webview linked). CI asserts `cargo tree -p opentrapp-daemon` is free of
# tauri/wry/webkit.
[package]
name = "opentrapp-daemon"
version = "0.9.0"
edition = "2021"
license = "MIT"
publish = false  # workspace-internal crate; never published to crates.io
description = "Headless perimeter daemon for OpenTrApp (no GUI deps)"
repository = "https://github.com/albertdobmeyer/opentrapp"

[[bin]]
name = "opentrapp-daemon"
path = "src/main.rs"

# cargo-dist ships this binary (ADR-0023). `publish = false` keeps it off
# crates.io but otherwise hides it from dist, so opt it back in explicitly.
[package.metadata.dist]
dist = true

[dependencies]
opentrapp-core = { path = "../core" }
# The async runtime + signal handling for the supervision loop. NOT tauri/webkit
# — the WebKit-free CI gate still holds.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
