# viewer-server — the de-Tauri on-demand loopback web GUI server (ADR-0022 / threat-model.md T8).
#
# Activated at migration step 2 (the threat-model gate cleared). It serves the existing React app
# over a token-gated 127.0.0.1 HTTP/WS surface, calling opentrapp-core (never duplicating
# orchestration logic, CLAUDE.md §5). The §2 security middleware (Host/Origin/bearer, 0600 session,
# nonce→cookie handoff) is its riskiest part and is covered by this crate's tests.
#
# INVARIANT (the gtk-free CI gate extends here): this crate must stay gtk/webkit/wry-free.
# `cargo tree -p viewer-server | grep -iE 'tauri|wry|webkit'` must be EMPTY.
[package]
name = "viewer-server"
version = "0.9.0"
edition = "2021"
publish = false
repository = "https://github.com/albertdobmeyer/opentrapp"
# MIT like the rest of the workspace. Required now that the de-Tauri cutover makes
# this a top-level virtual-workspace member, so `cargo deny check licenses` sees it
# (previously the graph rooted at the opentrapp package, which depended only on core).
license = "MIT"

# cargo-dist ships this binary alongside the daemon (the daemon spawns it for the
# on-demand viewer; ADR-0023). `publish = false` would otherwise hide it from dist.
[package.metadata.dist]
dist = true

[dependencies]
# Pure-Rust async HTTP/WS — verified zero gtk/webkit (ADR-0022 §4).
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }   # ServiceExt::oneshot for middleware tests
tower-http = { version = "0.6", features = ["fs", "set-header", "limit", "timeout"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"               # ≥256-bit token (§2.3)
anyhow = "1"               # error handling (pure-Rust, gtk-free)
# The orchestration engine — the server calls THIS, never duplicates logic (CLAUDE.md §5).
opentrapp-core = { path = "../core" }
# Optional single-binary asset embedding (§5); or serve app/dist/ from a path.
# rust-embed = "8"

[dev-dependencies]
# Live WS client for the spike's stream-line proof (test-only; pure-Rust, gtk-free).
tokio-tungstenite = "0.29"
futures-util = "0.3"
